# using_NeuralCDE_with_diffrax

./: .gitignore  01_controlled_differential_equations.ipynb  02_neural_controlled_differential_equations.ipynb  03_RNN_JAX.ipynb  03_discrete_controlled_differential_equations.ipynb  04_mnist_stroke_dataset.ipynb  04_ununiformed_sequence_dataloader.ipynb  05_mnist_neural_cde.ipynb  06_mnist_discrete_cde.ipynb  10_mnist_experiment.ipynb  README.md  Taskfile.yml  pyproject.toml  train_and_eval_models.py
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
output/configuration/: NeuralCDE-2024年05月04日-18:38:29.json  NeuralCDE-2024年05月06日-12:21:02.json  NeuralCDE-2024年05月08日-14:44:29.json  RNN-2024年05月05日-18:38:38.json  RNN-2024年05月05日-19:03:06.json  RNN-2024年05月05日-21:20:18.json  RNN-2024年05月08日-19:52:16.json
output/memray/: memray-flamegraph-NeuralCDE-2024年05月06日-12:21:02.html  memray-flamegraph-NeuralCDE-2024年05月08日-14:44:29.html  memray-flamegraph-RNN-2024年05月05日-21:20:18.html  memray-flamegraph-RNN-2024年05月08日-19:52:16.html
output/model/: NeuralCDE-2024年05月06日-12:21:02.eqx  NeuralCDE-2024年05月08日-14:44:29.eqx  RNN-2024年05月05日-21:20:18.eqx  RNN-2024年05月08日-19:52:16.eqx
output/result/: NeuralCDE-2024年05月04日-18:38:29.json  NeuralCDE-2024年05月06日-12:21:02.json  NeuralCDE-2024年05月08日-14:44:29.json  RNN-2024年05月05日-19:03:06.json  RNN-2024年05月05日-21:20:18.json  RNN-2024年05月08日-19:52:16.json
tools/: __init__.py  config.py
tools/_dataset/: README.md  __init__.py  dataloader.py  datasets.py
tools/_eval/: evaluation.py
tools/_loss/: __init__.py  cross_entropy.py
tools/_model/: __init__.py  discrete_cde.py  neural_cde.py  vector_field.py
tools/_modules/: discrete_cde.py  vector_field.py
tools/_test_module/: __init__.py  test_dataloader.py  test_spiral_dataset.py
tools/_test_modules/: test_dataloader.py  test_datasets.py
tools/_train/: update.py
