[tool.poetry]
name = "test-diffrax"
version = "0.1.0"
description = ""
authors = ["flatton <junpline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.1.5"
isort = "^5.13.2"
pydantic = "^2.7.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
