[tool.poetry]
name = "test-diffrax"
version = "0.1.0"
description = ""
authors = ["flatton <junpline@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.26"
optax = "^0.2.2"
jaxtyping = "^0.2.28"
lineax = "^0.0.4"
equinox = "^0.11.3"
diffrax = "^0.5.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
scipy = "^1.13.0"
jupyterlab = "^4.1.5"
isort = "^5.13.2"
pydantic = "^2.7.0"
tqdm = "^4.66.2"
natsort = "^8.4.0"
memray = "^1.12.0"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
