[tool.poetry]
package-mode = false
name = "using-diffrax"
version = "0.1.0"
description = ""
authors = ["flatton"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jax = "^0.4.26"
optax = "^0.2.2"
jaxtyping = "^0.2.28"
lineax = "^0.0.4"
equinox = "^0.11.3"
diffrax = "^0.5.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
scipy = "^1.13.0"
jupyterlab = "^4.1.5"
isort = "^5.13.2"
pydantic = "^2.7.0"
tqdm = "^4.66.2"
natsort = "^8.4.0"
memray = "^1.12.0"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__pycache__",
]

select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
]

ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "B024", # abstract class has no abstract methods
]

unfixable = [
    "F401", # module imported but unused
    "F841", # local variable is assigned to but never used,
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.black]
line-length = 100
